vertical overflow fixed

--- a/src/styles/apple_music.css
+++ b/src/styles/apple_music.css
@@ -1,10 +1,8 @@
 #flexApple {
     display: flex;
     flex-direction: row;
-    height:calc(100vh - 80px);
-    background-color:white
+    background-color:white;
 }
-
 
 
 .mailBox button {
