--- a/src/styles/ui_overlay.css
+++ b/src/styles/ui_overlay.css
@@ -38,7 +38,7 @@ div.top-row {
 
 .prompt {
     position: absolute;
-    top: -1%;
+    top: -2%;
     left: 50%;
     transform: translate(-50%, 0%);
 
